# finprince-

./: .gitattributes  .gitignore  .pyre_configuration  BACKEND_FIXES.md  BANKING_VALIDATION_FIX.md  BULK_PROCESSING_RUNBOOK.md  ECONNRESET_FIX.md  GSTIN_VALIDATION_FIX.md  GST_System_Review.md  RBAC_IMPLEMENTATION_SUMMARY.md  RBAC_INTEGRATION_GUIDE.md  RBAC_QUICK_REFERENCE.md  RBAC_QUICK_START.md  RBAC_RESTRUCTURING_SUMMARY.md  README.md  README_RBAC.md  SECURITY_ARCHITECTURE.md  TDS_404_FIX.md  USERS_ROLES_STRUCTURE.md  USER_CREATION_FIX_SUMMARY.md  VENDOR_CREATION_FIX.md  VENDOR_CREATION_TEST_GUIDE.md  VENDOR_TESTING_README.md  VENDOR_TESTING_SUMMARY.md  _tmp.txt  alerts_vouchers.txt  all_vouchers.txt  apply_migration.py  automated_vendor_test.py  backfill_party_ledgers.py  backup.sql  backupschema.sql  bank_reconciliation_patch.sql  check_db.py  check_grn.py  check_grn_tables.sql  check_schema.txt  check_spaces.txt  check_usage.py  dashboard-builder-demo.html  (+61 more)
backend/: .env  .env.example  .gitignore  .pyre_configuration  0002_error.txt  CWD_TABLE_DESC.txt  DELAYED_REENQUEUE_VALIDATION_REPORT.md  DESCRIBE_OUTWARD.txt  Dockerfile  Dockerfile.worker  FORENSIC_ROOT_CAUSE_REPORT.md  FULL_BASE_PROMPT.txt  FULL_EXTRACTION_SCHEMA.json  FULL_SYSTEM_PROMPT.txt  INVOICEPAGERESULT_LIFECYCLE_FORENSIC_REPORT.md  Modelfile.qwen_gpu  NON_TERMINAL_STATE_FORENSIC_REPORT.md  REAL_COMBINED_PROMPT.txt  REAL_QWEN_PAYLOAD.json  REAL_SYSTEM_PROMPT.txt  REAL_USER_PROMPT.txt  RECEIVE_COUNT_FORENSIC_VALIDATION.md  TABLES.txt  TRANSLATOR_FORENSIC_AUDIT_REPORT.md  add_allocation_columns.py  (+403 more)
(+1314 files in other folders)
